gw1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cnvrg-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert # This should match the Certifcate secretName
      hosts:
        - app.devopslab.cnvrg.io # This should match a DNS name in the Certificate
