kuard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  selector:
    matchLabels:
      app: kuard
  replicas: 1
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:1
          imagePullPolicy: Always
          name: kuard
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: kuard
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cnvrg-app-route
spec:
  hosts:
    - cnvrg-app.devopslab.cnvrg.io
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: kuard.cnvrg.svc.cluster.local
